apps/entry-envoy/src/envoy.yaml
admin:
    address:
        socket_address:
            protocol: TCP
            address: 0.0.0.0
            port_value: 10001
static_resources:
    listeners:
        - name: listener_0
          address:
              socket_address:
                  protocol: TCP
                  address: 0.0.0.0
                  port_value: 10000
          filter_chains:
              - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          scheme_header_transformation:
                              scheme_to_overwrite: http
                          stat_prefix: ingress_http
                          route_config:
                              name: local_route
                              virtual_hosts:
                                  - name: local_service
                                    domains: ["*"]
                                    routes:
                                        - match:
                                              prefix: "/"
                                          route:
                                              host_rewrite_literal: localhost
                                              cluster: service_home
                          http_filters:
                              - name: lua_header_filter
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                                    default_source_code:
                                        filename: /etc/envoy/set-header.lua
                              - name: envoy.filters.http.router
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    clusters:
        - name: service_home
          connect_timeout: 30s
          type: LOGICAL_DNS
          # Comment out the following line to test on v6 networks
          dns_lookup_family: V4_ONLY
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: service_home
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: home
                                      port_value: 80
